# sprout

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
backlog/: config.yml
backlog/tasks/: task-1 - Make-`-discard`-consistently-discard-all-tracked-changes.md  task-10 - gcコマンドを追加して参照されないオブジェクトを削除する.md  task-11 - オブジェクトを圧縮して保存する.md  task-12 - diffコマンドを追加してコミット間のファイル差分を表示する.md  task-13 - restoreで特定のファイルだけを復元できるようにする.md  task-14 - タグ名前付きスナップショットを追加する.md  task-15 - .sproutignoreで無視パターンを指定できるようにする.md  task-16 - logコマンドに表示件数の制限オプションを追加する.md  task-17 - ブランチの削除とリネームをできるようにする.md  task-18 - 大きなファイルの処理中に進捗を表示する.md  task-19 - 主要コマンドにJSON出力オプションを追加する.md  task-2 - switch-restoreの未保存変更判定を高速化する.md  task-20 - シェル補完を有効化しREADMEに導入手順を記載する.md  task-21 - コミットにサムネイル添付メディアを登録できるようにする.md  task-22 - リポジトリ全体のコミットグラフを取得できるようにする.md  task-23 - Tauri-GUIの基盤を構築する.md  task-24 - GUIからCLIの各種操作を行えるようにする.md  task-25 - GUIにコミットツリーのサムネイル付き俯瞰ビューを実装する.md  task-26 - serveコマンド常駐モードを追加してGUIの応答性を上げる.md  task-27 - cat-exportコマンドで作業ツリーを触らずコミット内ファイルを取り出せるようにする.md  task-28 - コミットに後付けのメモとラベルを付けられるようにする.md  task-29 - GUIにサムネイル生成補助画像縮小・波形画像化を実装する.md  task-3 - resolve_commitのLIKEワイルドカードをエスケープする.md  task-30 - GUIにファイル監視と自動スナップショットを実装する.md  task-31 - 特定ファイルの変更履歴をlogで辿れるようにする.md  task-32 - リポジトリの整合性を検査するdoctorコマンドを追加する.md  task-33 - リポジトリの容量と重複排除効果を確認できるようにする.md  task-4 - track-untrackが0件のとき警告を表示する.md  task-5 - 他の操作の実行中でも読み取り系コマンドを使えるようにする.md  task-6 - switch-restore後に空になったディレクトリを片付ける.md  task-7 - showコマンドのタイムスタンプを人間が読める形式にする.md  (+2 more)
tests/: test_cli.py  test_repository.py
(+4 files in other folders)
